# catalog-data-extractor

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  start-web.sh  start.sh  test_docling.py
src/extractor/: __init__.py  auto_extractor.py  cli.py  data_model.py  exporter.py  extractor.py  pdf_reader.py  verifier.py  web_verifier.py
src/extractor/templates/: verify.html
