[project]
name = "catalogdataextractor"
version = "0.1.0"
description = "Semi-automatic extraction of product data from PDF supplier/manufacturer catalogs"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pandas>=2.0.0",
    "flask>=3.0.0",
    "pymupdf>=1.23.0",
    "camelot-py>=0.11.0",  # Table extraction (requires ghostscript)
]

[project.scripts]
extractor = "extractor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extractor"]

[tool.hatch.build.targets.sdist]
include = ["src/extractor"]
